--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+config.py
 
 # C extensions
 *.so
@@ -26,7 +27,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-.py
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
